nomination api changes
