# ep-micro-admin/models/nominationsModel.ts
@@ -1,6 +1,7 @@
 import Joi from "joi";
 import { NominationStatus } from "../enums";
 import { INomination, IDeviceDetails, IPlatformLinks } from "../types/custom";
+import { v4 as uuidv4 } from 'uuid';
 
 class Nomination implements INomination {
   nomineeId: string;
@@ -19,10 +20,12 @@ class Nomination implements INomination {
   nomineeDeviceDetails: IDeviceDetails;
 
   constructor(nomination: INomination) {
-    this.nomineeId = nomination.nomineeId;
-    this.nomineeName = nomination.nomineeName;
-    this.selfNominee = nomination.selfNominee || false;
-    this.requesterName = nomination.selfNominee ? nomination.nomineeName : nomination.requesterName;
+    this.nomineeId = nomination.nomineeId || uuidv4();
+    this.selfNominee = typeof nomination.selfNominee === 'string' 
+    ? nomination.selfNominee === 'true'
+    : Boolean(nomination.selfNominee);
+    this.nomineeName = this.selfNominee ? nomination.requesterName : nomination.nomineeName;
+    this.requesterName = nomination.requesterName;
     this.requesterEmail = nomination.requesterEmail;
     this.profilePictureUrl = nomination.profilePictureUrl || "";
     this.nomineePlatformLinks = nomination.nomineePlatformLinks || {
@@ -66,7 +69,7 @@ const validateCreateNomination = (nomination: INomination): Joi.ValidationResult
     eventId: Joi.string().required(),
     dateCreated: Joi.string().isoDate().allow("", null),
     dateUpdated: Joi.string().isoDate().allow("", null),
-    createdBy: Joi.number().required(),
+    createdBy: Joi.number().allow("", null),
     updatedBy: Joi.number().allow("", null),
     status: Joi.string().valid(...Object.values(NominationStatus)).required(),
     nomineeDeviceDetails: Joi.object().required()
@@ -102,8 +105,8 @@ const validateUpdateNomination = (nomination: INomination): Joi.ValidationResult
     eventId: Joi.string().required(),
     dateCreated: Joi.string().isoDate().allow("", null),
     dateUpdated: Joi.string().isoDate().allow("", null),
-    createdBy: Joi.number().required(),
-    updatedBy: Joi.number().required(),
+    createdBy: Joi.number().allow("", null),
+    updatedBy: Joi.number().allow("", null),
     status: Joi.string().valid(...Object.values(NominationStatus)).required(),
     nomineeDeviceDetails: Joi.object().required()
   });
